--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         />
         <h2>Search Engine Optimization</h2>
         <p>
-          The dominance of mobile internet use means that users are searching
+          The dominance of wow wow wow mobile internet use means that users are searching
           for the right business as they travel, shop, or sit on their couch at
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
